regular "record_syntax". This also allows to swap record syntax later
on, notably like this:

  unbundle no datatype_record_syntax

* Printing of constants and bound variables is more careful to avoid
free variables, and fixed variables with mixfix syntax (including
'structure'). Rare INCOMPATIBILITY, e.g. in "subgoal_tac", "rule_tac".


*** Isabelle/jEdit Prover IDE ***

* Action isabelle.select_structure (with keyboard shortcut C+7) extends
the editor selection by adding the enclosing formal structure, based on
formal markup by the prover. Repeated invocation of this action extends
the selection incrementally.

* The Output dockable (and its variants used elsewhere) has been
improved as follows:

  - Its vertical scroll position is maintained more carefully, when
    messages are printed incrementally.

  - Performance of printing messages repeatedly has improved slightly,
    with less load on the GUI thread.

  - Highlighting works via mouse hovering alone, without requiring
    C-modifier.

  - Search results are shown as tree view.

* An active highlight area in the input buffer or output panel may be
turned into a text selection by using the ALT modifier.

* The "Documentation" panel supports plain text files again, notably
"jedit-changes". This was broken in Isabelle2022, Isabelle2023,
Isabelle2024.

* Text rendering performance on macOS may be improved by using old
OpenGL instead of new Metal. This is controlled by the java command-line
option "-Dsun.java2d.metal=false", which is now the default.

* Update to jEdit 5.7.0, the latest release.

* Update GUI look-and-feel to FlatLaf 3.5.4, the latest release.
Starting with version 3.x there is native library support for
non-portable GUI operations. The Isabelle/Scala GUI setup disables that
by default, for cross-platform uniformity (arm64-linux lacks a native
library).

* Thanks to the update of FlatLaf, Linux with Wayland window manager
(e.g. standard Ubuntu) now renders submenus like "File / Recent Files"